# vaultysid

./: .eslintrc.json  .gitignore  .prettierrc  LICENSE  README.md  index.js  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  webpack.config.esm.cjs  webpack.config.js  webpack.config.node.cjs  webpack.config.web.cjs  webpack.test.config.js
.github/workflows/: rust-release.yml  rust.yml  test.yml  typescript.yml
cli/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.cjs
cli/__tests__/: tests.sh  vaultysid-cli
cli/doc/: SmartLink Connexion API.md
cli/src/: cli.ts  decrypt.ts  deserialize.ts  encrypt.ts  fromSecret.ts  generate.ts  sign.ts  verify.ts
cli/test/: vaultysid-cli.test.js
example/: logChallenge.js  sideChannelAttack.js  smartcardpgp.ts
example/file-encryption/: jsconfig.json  next.config.mjs  package.json  pnpm-lock.yaml
example/vaultys-wallet/: package.json  pnpm-lock.yaml
interops/: run-all-interops.sh  run-cross-language-test.sh  run-interop-test.sh
rfc/: DID.md  ENCRYPTION.md  PROTOCOL.md
rust/: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  build.sh
rust/benches/: crypto_bench.rs
rust/examples/: basic_usage.rs  dhies_example.rs  dilithium_example.rs  vaultysid_dilithium_example.rs
rust/src/: crypto.rs  error.rs  file_storage.rs  id_manager.rs  lib.rs  memory_channel.rs  vaultys_id.rs
rust/src/challenger/: mod.rs
rust/src/key_manager/: abstract_key_manager.rs  cypher_manager.rs  deprecated_key_manager.rs  dilithium_manager.rs  ed25519_manager.rs  mod.rs
rust/tests/: cross_language_test.rs  debug_channel.rs  dilithium_integration_test.rs  id_manager_test.rs  integration_tests.rs  protocol_interop.rs  typescript_compatibility.rs
src/: Challenger.js  Challenger.ts  Fido2Manager.js  Fido2Manager.ts  Fido2PRFManager.ts  GameOfLifeIcon.js  IdManager.js  IdManager.ts  KeyManager.js  KeyManager.ts  MemoryChannel.js  MemoryChannel.ts  MemoryStorage.js  MemoryStorage.ts  PGPCardManager.ts  PIVManager.ts  PQManager.ts  SoftCredentials.js  SoftCredentials.ts  VaultysId.js  VaultysId.ts  crypto.js  crypto.ts  cryptoChannel.js  cryptoChannel.ts  pqCrypto.ts
src/KeyManager/: AbstractKeyManager.ts  CypherManager.ts  DeprecatedKeyManager.ts  Ed25519Manager.ts  Fido2Manager.ts  Fido2PRFManager.ts  HybridManager.ts  PQManager.ts  index.ts
src/WebOfTrustSharing/: ConnectWithButton.ts  README.md  WebOfTrustDiscovery.ts  example.ts  index.ts
src/platform/: SoftCredentials.ts  abstract.ts  browser.ts  index.ts  node.ts  webauthn.ts
src/utils/: environment.ts  migration.ts
test/: ChannelMock.js  challenger.test.js  challenger.test.ts  challenger_v0.test.ts  channel.test.ts  fido2Manager.test.js  fido2Manager.test.ts  fido2PRFManager.test.ts  file.browser_test.ts  file.node.test.ts  html.js  hybridManager.node.test.ts  hybridManager.web.test.ts  idManager.test.js  idManager.test.ts  keymanager.test.js  keymanager.test.ts  pqc.test.ts  pqcManager.node.test.ts  pqcManager.test.ts  pqcManager.web.test.ts  runner.ts  saltpack.test.js  saltpack.test.ts  shims.ts  softCredentials.test.js  softCredentials.test.ts  test.html  utils.ts  v0tov1.js  v0tov1.test.js  v0tov1.test.ts  vectors.test.ts
test/assets/: backup.bin.json  test-bundle.js  test-bundle.js.map  wot.json  wot_v1.json
test/interops/: compatibility-export.ts  debug-channel.ts  memory-interop-test.ts  protocol-interop.ts  (+2 more)
typescript/: README.md  index.d.ts  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  webpack.test.config.js
web/: vaultysid.min.js  vaultysid.min.js.LICENSE.txt  vaultysid.min.js.map
(+48 files in other folders)
