[package]
name = "vaultysid"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async support
async-trait = "0.1"

# Cryptographic primitives
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = "4.1"
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1.1"  # MessagePack
base64 = "0.22"
hex = "0.4"

# JSON support
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Memory safety
zeroize = { version = "1.7", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
default = []

[[bench]]
name = "crypto_bench"
harness = false

[[bin]]
name = "protocol_interop"
path = "src/bin/protocol_interop.rs"

[[bin]]
name = "cross_language_test"
path = "src/bin/cross_language_test.rs"

[[bin]]
name = "debug_channel"
path = "src/bin/debug_channel.rs"
