[package]
name = "vaultysid"
version = "0.1.0"
authors = ["Vaultys"]
edition = "2021"
rust-version = "1.91"
description = "Cryptographic identity library providing Ed25519 signing, X25519 key exchange, and DID-based identity management"
documentation = "https://docs.rs/vaultysid"
readme = "README.md"
homepage = "https://github.com/vaultys/vaultysid"
repository = "https://github.com/vaultys/vaultysid"
license = "MIT"
keywords = ["cryptography", "identity", "ed25519", "x25519", "did"]
categories = ["cryptography", "authentication", "encoding"]
exclude = [
    "target/*",
    ".github/*",
    "*.sh",
]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# Async support
async-trait = "0.1"

# Cryptographic primitives
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = "4.1"
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = "=0.6.4"
rand_chacha = "0.3"
# Additional rand_core version for ml-dsa compatibility
getrandom = "0.2"

# Post-quantum cryptography
libcrux-ml-dsa = "0.0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1.1"  # MessagePack
base64 = "0.22"
hex = "0.4"

# JSON support
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Memory safety
zeroize = { version = "1.7", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
zerocopy = "0.8.27"
pqc_dilithium = "0.2.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.7"
proptest = "1.4"
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
default = []

[[bench]]
name = "crypto_bench"
harness = false

[[bin]]
name = "cross_language_test"
path = "src/bin/cross_language_test.rs"
required-features = []

[[bin]]
name = "debug_channel"
path = "src/bin/debug_channel.rs"
required-features = []

[[example]]
name = "basic_usage"

[[example]]
name = "dhies_example"

[[example]]
name = "dilithium_example"

[[example]]
name = "vaultysid_dilithium_example"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm]
inherits = "release"
opt-level = "s"
lto = true

[profile.bench]
inherits = "release"
